--- a/player/src/main/res/layout/player_layout.xml
+++ b/player/src/main/res/layout/player_layout.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.streye.app.myplayer.MainActivity">
+    tools:context=".Player">
 
     <com.google.vr.sdk.base.GvrView
         android:id="@+id/gvrView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.google.vr.sdk.base.GvrView>
+
 </RelativeLayout>
